@@ -1,6 +1,6 @@
 // ============================================================================
 //
-// Copyright (C) 2006-2016 Talend Inc. - www.talend.com
+// Copyright (C) 2006-2017 Talend Inc. - www.talend.com
 //
 // This source code is available under agreement available at
 // %InstallDIR%\features\org.talend.rcp.branding.%PRODUCTNAME%\%PRODUCTNAME%license.txt
@@ -25,7 +25,6 @@ import org.talend.commons.utils.workbench.extensions.ExtensionPointLimiterImpl;
 import org.talend.commons.utils.workbench.extensions.IExtensionPointLimiter;
 import org.talend.core.GlobalServiceRegister;
 import org.talend.core.ui.branding.IBrandingService;
-import org.talend.repository.model.RepositoryConstants;
 
 /**
  * Provides, using extension points, implementation of many factories.
@@ -54,8 +53,20 @@ public class RepositoryFactoryProvider {
                 hiddenRepository = hiddenRepos.split(";"); //$NON-NLS-1$
             }
 
+            boolean isPoweredByTalend = false;
+            IBrandingService brandingService = (IBrandingService) GlobalServiceRegister.getDefault()
+                    .getService(IBrandingService.class);
+            isPoweredByTalend = brandingService.isPoweredbyTalend();
             for (IConfigurationElement current : extension) {
                 try {
+                    String only4TalendStr = current.getAttribute("only4Talend"); //$NON-NLS-1$
+                    if (Boolean.valueOf(only4TalendStr) && !isPoweredByTalend) {
+                        continue;
+                    }
+                    String only4OemStr = current.getAttribute("only4Oem"); //$NON-NLS-1$
+                    if (Boolean.valueOf(only4OemStr) && isPoweredByTalend) {
+                        continue;
+                    }
                     IRepositoryFactory currentAction = (IRepositoryFactory) current.createExecutableExtension("class"); //$NON-NLS-1$
                     currentAction.setId(current.getAttribute("id")); //$NON-NLS-1$
                     currentAction.setName(current.getAttribute("name")); //$NON-NLS-1$
@@ -66,8 +77,10 @@ public class RepositoryFactoryProvider {
                     for (IConfigurationElement currentLoginField : current.getChildren("loginField")) { //$NON-NLS-1$
                         DynamicFieldBean key = new DynamicFieldBean(currentLoginField.getAttribute("id"), //$NON-NLS-1$
                                 currentLoginField.getAttribute("name"), //$NON-NLS-1$
+                                currentLoginField.getAttribute("defaultValue"), //$NON-NLS-1$
                                 new Boolean(currentLoginField.getAttribute("required")), //$NON-NLS-1$
-                                new Boolean(currentLoginField.getAttribute("password"))); //$NON-NLS-1$
+                                new Boolean(currentLoginField.getAttribute("password")), //$NON-NLS-1$
+                                Boolean.valueOf(currentLoginField.getAttribute("readonly"))); //$NON-NLS-1$
                         currentAction.getFields().add(key);
                     }
 
